--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AI Code Translator & Explainer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Fira+Code&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png"
+     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             font-family: 'Inter', sans-serif;
