--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Fira+Code&display=swap" rel="stylesheet">
       <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23111827'/%3E%3Cpath d='M30 85 V 15 h 25 c 15 0 25 10 25 25 s -10 25 -25 25 H 40' fill='none' stroke='%234f46e5' stroke-width='12' stroke-linecap='round' stroke-linejoin='round' /%3E%3Cpath d='M50 40 L 42 50 L 50 60 M 60 40 L 68 50 L 60 60' stroke='white' stroke-width='6' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
+
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
